# TestCase01

./: .gitignore  Dockerfile  README.md  docker-compose  pyproject.toml  session.py  test.json
app/: main.py  models.py  session.py  sessions.json  sessions_history.py  settings.py  storage.py  test_main.py
