[tool.poetry]
name = "testcase01"
version = "0.1.0"
description = ""
authors = ["victor <vick23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
fastapi-sessions = "^0.3.2"
gunicorn = "^20.1.0"
pytest = "^7.1.3"
requests = "^2.28.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
